testdata/baselines/reference/submodule/conformance/jsdocParseParenthesizedJSDocParameter.errors.txt
paren.js(1,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
paren.js(2,9): error TS7006: Parameter 's' implicitly has an 'any' type.


==== paren.js (2 errors) ====
    /** @type {function((string)): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    var x = s => s.toString()
            ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
    